NEW 274872
WebCore::XPath::Parser::Token contains uninitialized fields after construction
https://bugs.webkit.org/show_bug.cgi?id=274872
Summary WebCore::XPath::Parser::Token contains uninitialized fields after construction
David Kilzer (:ddkilzer)
Reported 2024-05-29 16:51:25 PDT
WebCore::XPath::Parser::Token contains uninitialized fields after construction. Regressed as instance variables in: Use unique_ptr instead of deleteAllValues in XPath https://bugs.webkit.org/show_bug.cgi?id=121082 <https://commits.webkit.org/140674@main> However, these variables existed prior to that commit as a `%union` in `Source/WebCore/xml/XPathGrammar.y`.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-29 16:52:27 PDT
David Kilzer (:ddkilzer)
Comment 2 2024-05-29 17:01:00 PDT
Note You need to log in before you can comment on or make changes to this bug.