Cherry-pick 279493@main (ff290911a4c8). https://bugs.webkit.org/show_bug.cgi?id=274872

WebCore::XPath::Parser::Token contains uninitialized fields after construction
    <https://bugs.webkit.org/show_bug.cgi?id=274872>
    <rdar://128972339>

    Reviewed by Chris Dumez.

    Merge individual token values into a std::variant<> type named
    TokenValue to make sure their initialized state and value are tracked
    properly.

    * Source/WebCore/xml/XPathParser.cpp:
    (WebCore::XPath::Parser::Token::TokenValue): Add.
    - Declare std::variant type to hold one of four possible values.
    (WebCore::XPath::Parser::Token::Token):
    - Replace four instance variables with TokenValue variable.
    - Delete default constructor since it is unused.
    - Condense constructors taking different value arguments into a single
      constructor taking a TokenValue (std::variant) r-value.
    (WebCore::XPath::Parser::Token::string): Add.
    (WebCore::XPath::Parser::Token::axis): Add.
    (WebCore::XPath::Parser::Token::numericOpcode): Add.
    (WebCore::XPath::Parser::Token::equalityTestOpcode): Add.
    - Add getter methods to read `value` instance variable.
    (WebCore::XPath::Parser::lex):
    - Update to use getter methods.

    Canonical link: https://commits.webkit.org/279493@main

Canonical link: https://commits.webkit.org/274313.296@webkitglib/2.44